@@ -171,4 +171,5 @@ psi: [320, 320, 320]
 zeta: [320, 320, 320]
 -63
 -63
-Total time spent: 21
+-64
+Total time spent: 22
