@@ -72,7 +72,8 @@ BA  54- ((x^7+x^3+x+1)*Mod(1,Mod(1,2)*d))%(x^4+x^3+x^2+1)->x^3+x
         instead of Mod(1,2)*x^3+Mod(1,2)*x [#2199]
     55- tan(-127336279536511925./2^49) -> completely wrong at \pb64
     56- ellocalred / K != Q: wrong encoding for I0 (kod = 1 instead of 0)
-    57- atanh(-0xffffffffffffffd60 / 2^68 * 1.) at \pb 64: large relative error
+    57- atanh near -1: large relative error
+    58- acosh near 1 or -1: large relative error
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
